HelloWorldDocker/Kubernates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  type: NodePort
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30000
