HelloWorldDocker/Kubernates/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: example-ingress
spec: 
  rules: 
    - 
      host: myapp.info
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: my-app-service
                port: 
                  number: 8080
            path: /
            pathType: Prefix
